@@ -4,11 +4,17 @@ import dev.stonks.takenoko.bot.DumbPlayer;
 import dev.stonks.takenoko.bot.RandomPlayer;
 import dev.stonks.takenoko.map.*;
 import dev.stonks.takenoko.map.Map;
+import dev.stonks.takenoko.objective.GardenerObjective;
+import dev.stonks.takenoko.objective.PandaObjective;
+import dev.stonks.takenoko.objective.PatternObjective;
+import dev.stonks.takenoko.pattern.MatchResult;
+import dev.stonks.takenoko.pattern.Pattern;
 import dev.stonks.takenoko.pawn.Panda;
 import dev.stonks.takenoko.gameManagement.Action;
 import dev.stonks.takenoko.objective.ObjectiveKind;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.Mockito;
 
 import java.util.*;
 
@@ -16,6 +22,7 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
+@SuppressWarnings("unchecked")
 public class PlayerTest {
 
     RandomPlayer randomPlayer;
@@ -29,21 +36,32 @@ public class PlayerTest {
 
     @Test
     public void decideTest(){
-        dev.stonks.takenoko.map.Map map = new Map(1);
+        Map map = new Map(3);
         ArrayList<Action> possibleActions = new ArrayList<>(Arrays.asList(Action.values()));
         assertTrue(possibleActions.contains(randomPlayer.decide(possibleActions, map)));
+        assertTrue(possibleActions.contains(dumbPlayer.decide(possibleActions, map)));
         assertEquals(randomPlayer.getCurrentMapState(), map);
+        assertEquals(dumbPlayer.getCurrentMapState(), map);
         possibleActions.clear();
         assertThrows(IllegalStateException.class, () -> randomPlayer.decide(possibleActions, map));
+        assertThrows(IllegalStateException.class, () -> dumbPlayer.decide(possibleActions, map));
     }
 
     @Test
     public void chooseObjectiveKindTest(){
         ArrayList<ObjectiveKind> possibleObjectiveKinds = new ArrayList<>(Arrays.asList(ObjectiveKind.values()));
+        possibleObjectiveKinds.remove(ObjectiveKind.Emperor);
         possibleObjectiveKinds.remove(ObjectiveKind.Panda);
+
         assertTrue(possibleObjectiveKinds.contains(randomPlayer.chooseObjectiveKind(possibleObjectiveKinds)));
+        dumbPlayer.addObjectives(Mockito.mock(GardenerObjective.class));
+        dumbPlayer.addObjectives(Mockito.mock(PatternObjective.class));
+        dumbPlayer.addObjectives(Mockito.mock(PatternObjective.class));
+        assertTrue(possibleObjectiveKinds.contains(dumbPlayer.chooseObjectiveKind(possibleObjectiveKinds)));
+        assertEquals(ObjectiveKind.Gardener, dumbPlayer.chooseObjectiveKind(possibleObjectiveKinds));
         possibleObjectiveKinds.clear();
         assertThrows(IllegalStateException.class, () -> randomPlayer.chooseObjectiveKind(possibleObjectiveKinds));
+        assertThrows(IllegalStateException.class, () -> dumbPlayer.chooseObjectiveKind(possibleObjectiveKinds));
     }
 
     @Test
@@ -52,19 +70,25 @@ public class PlayerTest {
         Set<Coordinate> placements2 = new HashSet<>();
         List<Coordinate> placementsList = new ArrayList<>(placements);
         Map map = mock(Map.class);
-        when(map.getTilePlacements()).thenReturn(placements).thenReturn(placements2).thenReturn(placements);
+        when(map.getTilePlacements()).thenReturn(placements, placements, placements2, placements2, placements, placements);
 
         ArrayList<AbstractTile> tiles = new ArrayList<>(Arrays.asList(new AbstractTile(TileKind.Green),new AbstractTile(TileKind.Pink)));
-        ArrayList<Tile> res = new ArrayList<>(Arrays.asList(
+        ArrayList<Tile> res = new ArrayList<>(List.of(
                 tiles.get(0).withCoordinate(placementsList.get(0)),
                 tiles.get(0).withCoordinate(placementsList.get(1)),
                 tiles.get(1).withCoordinate(placementsList.get(0)),
                 tiles.get(1).withCoordinate(placementsList.get(1))));
         randomPlayer.setCurrentMapState(map);
+        dumbPlayer.setCurrentMapState(map);
+        dumbPlayer.setChosenAction(List.of(Optional.of(5), Optional.of(Action.PutTile.ordinal()), Optional.of(1), Optional.of(TileKind.Yellow.ordinal())));
+
         assertTrue(res.contains(randomPlayer.putTile(tiles)));
+        assertTrue(res.contains(dumbPlayer.putTile(tiles)));
         assertThrows(IllegalStateException.class, () -> randomPlayer.putTile(tiles));
+        assertThrows(IllegalStateException.class, () -> dumbPlayer.putTile(tiles));
         tiles.clear();
         assertThrows(IllegalStateException.class, () -> randomPlayer.putTile(tiles));
+        assertThrows(IllegalStateException.class, () -> dumbPlayer.putTile(tiles));
     }
 
     @Test
@@ -75,10 +99,63 @@ public class PlayerTest {
         Set<Tile> placements2 = new HashSet<>();
         dev.stonks.takenoko.map.Map map = mock(Map.class);
         Panda panda = new Panda(new Coordinate(1,1));
-        when(map.getPossiblePawnPlacements(panda)).thenReturn(placements).thenReturn(placements2);
+        when(map.getPossiblePawnPlacements(panda)).thenReturn(placements, placements, placements2, placements2);
         randomPlayer.setCurrentMapState(map);
+        dumbPlayer.setCurrentMapState(map);
+        dumbPlayer.setChosenAction(List.of(Optional.of(5), Optional.of(Action.MovePanda.ordinal()), Optional.of(1), Optional.empty()));
+
         assertTrue(placements.contains(randomPlayer.choseWherePawnShouldGo(panda)));
+        assertTrue(placements.contains(dumbPlayer.choseWherePawnShouldGo(panda)));
+
         placements.clear();
         assertThrows(IllegalStateException.class, () -> randomPlayer.choseWherePawnShouldGo(panda));
+        assertThrows(IllegalStateException.class, () -> dumbPlayer.choseWherePawnShouldGo(panda));
+    }
+
+    @Test
+    public void exploreTest() throws IllegalPlacementException {
+        //Some objective :
+        Pattern pattern = new Pattern().withCenter(TileKind.Green).withNeighbor(Direction.NorthEast, TileKind.Pink);
+        PatternObjective objectiveWin = new PatternObjective(5,pattern);
+        dumbPlayer.addObjectives(objectiveWin);
+
+        //Making a map :
+        Map map = new Map(42);
+
+        map.setTile(map.initialTile().getCoordinate().moveWith(Direction.South), new AbstractTile(TileKind.Green));
+
+        //Tile t = map.addNeighborOf(TileKind.Green, map.initialTile().withDirection(Direction.South));
+
+        map.getTile(map.initialTile().getCoordinate().moveWith(Direction.South)).get().deirrigate();
+
+        dumbPlayer.decide(new ArrayList<>(Arrays.asList(Action.values())), map);
+        assertTrue(dumbPlayer.getObjectives().contains(objectiveWin));
+        dumbPlayer.getChosenAction().stream().map(Optional::get).forEach(x -> System.out.print(x + " "));
+        System.out.println("\n");
+
+        map.getTile(map.initialTile().getCoordinate().moveWith(Direction.South)).get().irrigate();
+        //t.irrigate();
+
+        dumbPlayer.decide(new ArrayList<>(Arrays.asList(Action.values())), map);
+        assertTrue(dumbPlayer.getObjectives().contains(objectiveWin));
+        assertEquals(dumbPlayer.getChosenAction(), List.of(Optional.of(5), Optional.of(2), Optional.of(1), Optional.of(2)));
+        assertEquals(dumbPlayer.putTile(new ArrayList<>(List.of(
+                new AbstractTile(TileKind.Green),
+                new AbstractTile(TileKind.Pink),
+                new AbstractTile(TileKind.Yellow)))), new Tile(map.initialTile().getCoordinate().moveWith(Direction.SouthEast), TileKind.Pink));
+        dumbPlayer.getChosenAction().stream().map(Optional::get).forEach(x -> System.out.print(x + " "));
+        System.out.println("\n");
+
+        //map.setTile(map.getTile(map.initialTile().getCoordinate().moveWith(Direction.South)).get().getCoordinate().moveWith(Direction.NorthEast), new AbstractTile(TileKind.Pink));
+        map.setTile(map.initialTile().getCoordinate().moveWith(Direction.SouthEast), new AbstractTile(TileKind.Pink));
+        dumbPlayer.newObjectivesAchieved(objectiveWin);
+
+        //Tile t3 = map.addNeighborOf(TileKind.Pink, t.withDirection(Direction.NorthEast));
+        //Tile t2 = map.addNeighborOf(TileKind.Pink, map.initialTile().withDirection(Direction.SouthEast));
+
+        dumbPlayer.decide(new ArrayList<>(Arrays.asList(Action.values())), map);
+        assertFalse(dumbPlayer.getObjectives().contains(objectiveWin));
+        assertEquals(dumbPlayer.getChosenAction(), List.of(Optional.of(0), Optional.of(0), Optional.of(0)));
+        dumbPlayer.getChosenAction().stream().map(Optional::get).forEach(x -> System.out.print(x + " "));
     }
 }
